--- a/index.html
+++ b/index.html
@@ -22,16 +22,25 @@
         <div class="mdui-toolbar mdui-color-theme">
           <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">menu</i></a>
           <a href="javascript:;" class="mdui-typo-headline">地铁计算器</a>
-          <a href="javascript:;" class="mdui-typo-title">Release Channel</a>
+          <a href="javascript:;" class="mdui-typo-title">Dev Channel</a>
           <div class="mdui-toolbar-spacer"></div>
           <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">search</i></a>
           <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
           <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">more_vert</i></a>
         </div>
       </div>
-      <div class="mdui-typo background">
-          <h1>暂未完工</h1>
-          尽情期待
+      <div class="mdui-typo">
+          <h1>输入</h1>
+          <div class="mdui-textfield mdui-textfield-floating-label">
+            <label class="mdui-textfield-label">车体号</label>
+            <input class="mdui-textfield-input" type="email" required id="input"/>
+            <div class="mdui-textfield-error">车体号不能为空</div>
+            <div class="mdui-textfield-helper">输入车体号</div>
+          </div>
+          <button class="mdui-btn mdui-btn-block mdui-color-theme-accent mdui-ripple">GO!</button>
+          <div class="mdui-divider"></div>
+          <h1>输出</h1>
+          <div id="output"></div>
       </div>
 
     <!-- MDUI JavaScript -->
