--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="mdui-toolbar mdui-color-theme">
           <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">menu</i></a>
           <a href="javascript:;" class="mdui-typo-headline">地铁计算器</a>
-          <a href="javascript:;" class="mdui-typo-title">Canary Channel</a>
+          <a href="javascript:;" class="mdui-typo-title">Canary 20210123</a>
           <div class="mdui-toolbar-spacer"></div>
         </div>
       </div>
