--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="mdui-toolbar mdui-color-theme">
           <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">menu</i></a>
           <a href="javascript:;" class="mdui-typo-headline">地铁计算器</a>
-          <a href="javascript:;" class="mdui-typo-title">Release Channel</a>
+          <a href="javascript:;" class="mdui-typo-title">Beta Channel</a>
           <div class="mdui-toolbar-spacer"></div>
           <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">search</i></a>
           <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
